fix:sonarqube qui fonctionne

--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=src
 sonar.exclusions=node_modules/**,public/**
 
 # Tests
-sonar.tests=src/tests
+sonar.tests=tests
 sonar.test.inclusions=**/*.test.js
 sonar.exclusions=node_modules/**,public/**,**/coverage/lcov-report/**,src/tests/**
 
